Add name and description properties to composer.json
Bug: T311321
Change-Id: I33e8088f7e8559bc21ba572370b619574c5ac259

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,14 @@
 {
+	"name": "mediawiki/display-title",
+	"type": "mediawiki-extension",
+	"description": "Uses displaytitle page property in link text, subtitle, and talk page title; provides parser function to query displaytitle",
+	"keywords": [
+		"wiki",
+		"MediaWiki",
+		"extension"
+	],
+	"homepage": "https://www.mediawiki.org/wiki/Extension:DisplayTitle",
+	"license": "MIT",
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "41.0.0",
 		"mediawiki/minus-x": "1.1.1",
